// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchCharacters /> Deveria ao pesquisar e clicar no Botão de pesquisa navegar para a URL dos personagens com o inicial ou nome dos personagens por parametro 1`] = `
<div>
  <div>
    Characters Page 1
  </div>
</div>
`;

exports[`<SearchCharacters /> Deveria ao pesquisar e pressionar a tecla Enter fazer a navegação para a URL dos personagens 1`] = `
<div>
  <div>
    Characters Page 2
  </div>
</div>
`;

exports[`<SearchCharacters /> Deveria renderizar na tela os containers SearchCharactersPage, SearchCharactersPageTitle, SearchCharactersTitleIcon, SearchCharactersPageSearchContainer, SearchCharactersPageFooter 1`] = `
<div>
  <div
    class="sc-kvAqsT dwecmR"
    data-testid="id-search-characters-page"
  >
    <h1
      class="sc-grJzXs fhXCmH"
      data-testid="id-search-characters-title"
    >
      Search for your favorite hero
      <p
        class="sc-hpvRAK imfqkc"
        data-testid="id-search-characters-title-icon-container"
      >
        <svg
          data-testid="id-search-characters-title-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </p>
    </h1>
    <h2
      class="sc-cdtKKh eLXtmM"
      data-testid="id-search-characters-subtitle"
    >
      Find information about your favorite Marvel heroes.
    </h2>
    <div
      class="sc-jWWaec fVdTEg"
      data-testid="id-search-characters-container"
    >
      <input
        class="sc-gZGWnS ckdMuw"
        data-testid="id-search-characters-bar"
        placeholder="Search for your favorite Marvel Hero"
        type="text"
        value=""
      />
      <button
        class="sc-cLrhaH fhEwuW"
        data-testid="id-search-characters-button"
      >
        Search
      </button>
    </div>
    <p
      class="sc-fIGkQR cnrkPR"
      data-testid="id-search-characters-page-footer"
    >
      ⚡️ Não julgue o livro pela capa! O design pode não ser de outro mundo, mas o código é digno do Multiverso! ✨🚀
    </p>
  </div>
</div>
`;

exports[`<SearchCharacters /> Deveria ser possível buscar os personagens. Ao buscar deve redirecionar para outra tela 1`] = `
<div>
  Buscou com sucesso
</div>
`;
